Clean and refactor tests for experiment design