@@ -9,6 +9,7 @@ import uk.ac.ebi.atlas.trader.ExperimentDesignDao;
 import uk.ac.ebi.atlas.trader.ExperimentTrader;
 
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ThreadLocalRandom;
 
@@ -35,6 +36,7 @@ class ExperimentDesignTableServiceTest {
                         .build();
         var pageNo = RNG.nextInt(1,10);
         var pageSize = RNG.nextInt(20,50);
+        var expectedTotalNoOfRows = 100;
 
         when(experimentDesignDaoMock.getTableSize(experiment.getAccession()))
                 .thenReturn(100);
@@ -44,10 +46,10 @@ class ExperimentDesignTableServiceTest {
         when(experimentDesignDaoMock.getExperimentDesignData(experiment.getAccession(), pageNo, pageSize*2))
                 .thenReturn(ImmutableList.of(
                         new LinkedHashMap<>() {{
-                            put("characteristic", ImmutableList.of("ch1"));
+                            put("characteristic", List.of("ch1"));
                         }},
                         new LinkedHashMap<>() {{
-                            put("factor", ImmutableList.of("fv1"));
+                            put("factor", List.of("fv1"));
                         }}
                 ));
         when(experimentTraderMock.getExperiment(experiment.getAccession(), ""))
@@ -60,9 +62,14 @@ class ExperimentDesignTableServiceTest {
                 pageNo,
                 pageSize);
 
-        assertThat(result.get("headers").isJsonArray()).isTrue();
-        assertThat(result.get("data").isJsonArray()).isTrue();
-        assertThat(result.get("totalNoOfRows").getAsInt()).isEqualTo(100);
+        var headers = result.getAsJsonArray("headers");
+        var data = result.getAsJsonArray("data");
+        var totalNoOfRows = result.get("totalNoOfRows").getAsInt();
+
+        assertThat(headers).isNotNull().isNotEmpty();
+        assertThat(data).isNotNull().isNotEmpty();
+        assertThat(totalNoOfRows).isEqualTo(expectedTotalNoOfRows);
+
     }
 
 }
